--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
     sdk: flutter
   
   http: ^0.12.0+1
-  rxdart: ^0.18.0
+  # rxdart: ^0.18.0
+  flutter_bloc: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -30,6 +31,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  mockito: ^4.1.1
 
 
 # For information on the generic Dart part of this file, see the
