--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dev_dependencies:
   mockito: ^4.1.1
   google_fonts: ^0.3.10
   nice_button: ^0.1.7
+  flutter_slidable: "^0.5.4"
+  flutter_platform_widgets: ^0.32.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
